HtmlUi: Fixed table header sort-icon
- If text was aligned right (number columns), the title overlapped the
sort icon

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/TableHeader.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/TableHeader.css
@@ -29,6 +29,12 @@
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
 
+  &.sort-asc,
+  &.sort-desc {
+    /* make room form sort-icon */
+    padding-right: 20px;
+  }
+
   &.sort-desc:after {
     .sort-icon(@icon-arial-long-arrow-down);
   }
